--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/dcbowman/sayHello#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "csurf": "^1.9.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.1",
     "handlebars": "^4.0.5",
     "mongojs": "^2.4.0",
     "mongoose": "^4.6.0",
