csrf user sign in complete with password encrypt

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/dcbowman/sayHello#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
     "csurf": "^1.9.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
@@ -27,6 +29,8 @@
     "mongojs": "^2.4.0",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
-    "mysql": "^2.11.1"
+    "mysql": "^2.11.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
